--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Firebase Service Account (sensitive credentials)
+*firebase-adminsdk*.json
+service-account*.json
+
 # vercel
 .vercel
 
